etc/openshift/phpinfo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpinfo-svc
spec:
  ports:
    -
#      nodePort: 30000
      port: 80
      targetPort: 8080
  selector:
    app: phpinfo
#  type: NodePort
