etc/openshift/phpinfo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  name: phpinfo
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: phpinfo-svc
